Prevent right-hand disclaimers from wrapping.

--- a/static/css/devices.css
+++ b/static/css/devices.css
@@ -454,6 +454,7 @@ Base template styles & classes
       .disclaimers ul {
         position: absolute;
         top: 50%;
+        right: 0;
         margin: 0;
         margin-top: -0.5em;
       }
